# task_scheduler

./: .gitignore  README.md  VOICE_TRAINING_GUIDE.md  adk_tools.py  commands.py  db.py  listener.py  main_cli.py  main_tui.py  migrate_db.py  morning_brief.py  pyproject.toml  requirements.txt  run_brother.bat  scheduler_setup.ps1  tasks.db  uv-installer.ps1
testing/voice/: tts.py  voice_test_remove.py
