[project]
name = "task-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataparser>=0.0.2",
    "dateparser>=1.3.0",
    "faster-whisper==1.1.1",
    "google-generativeai>=0.8.6",
    "kokoro>=0.9.4",
    "kokoro-onnx>=0.5.0",
    "onnxruntime>=1.24.2",
    "pyqt6>=6.10.2",
    "sounddevice>=0.5.5",
    "textual>=8.0.0",
    "vosk>=0.3.45",
    "torch==2.4.1+cpu",
    "torchvision==0.19.1+cpu",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }